--- a/BasicoWebMVCCore/Views/HelloWorld/Index.cshtml
+++ b/BasicoWebMVCCore/Views/HelloWorld/Index.cshtml
@@ -1,9 +1,9 @@
 ﻿
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Movie List";
 }
 
-<h1>Index</h1>
+<h2>My Movie List</h2>
 
 <p>Hello from our View Template!</p>
 
